<resources>
    <string name="app_name">Avalon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="join">Join</string>
    <string name="lobby_code">Lobby Code</string>
    <string name="minion_of_mordred_description">Evil subordinate of Mordred, remain hidden and sabotage the adventures.</string>
    <string name="servant_of_arthur_description">Loyal knight of arthur, always helps on the adventure hoping it will be successful.</string>
    <string name="assassin_description">At the end of the game(if your team is loosing) you can guess who is Merlin, if you are right your team win.</string>
    <string name="morgana_description">Disguises as Merlin.</string>
    <string name="oberon_description">Hidden to the evils</string>
    <string name="mordred_description">Hidden to Merlin</string>
    <string name="merlin_description">Can see the evils.</string>
    <string name="arnold_description">Can start as king in the next game.</string>
    <string name="precival_description">Can see merlin.</string>
    <string name="min_players">The lobby must have at least 5 players!</string>
    <string name="max_players">The lobby must have maximum 10 players!</string>
    <string name="guess_the_merlin">Guess the Merlin!</string>
    <string name="charactername">CharacterName</string>
    <string name="description">Description</string>
    <string name="the_evil_have_won">The Evil have Won!</string>
    <string name="good_won">Good won!</string>
    <string name="guess">Guess</string>
    <string name="select">Select</string>
    <string name="vote">Vote</string>
    <string name="character">Character</string>
    <string name="adventure">Adventure</string>
    <string name="select_x_players">Select X players</string>
    <string name="choose">Choose</string>
    <string name="textview">TextView</string>
    <string name="loading">Loading...</string>
    <string name="no">NO</string>
    <string name="playersjoined">PlayersJoined:</string>
    <string name="hg5zsa">HG5ZSA</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="playername">PlayerName</string>
    <string name="assassin">Assassin</string>
    <string name="morgana">Morgana</string>
    <string name="mordred">Mordred</string>
    <string name="oberon">Oberon</string>
    <string name="percival">Percival</string>
    <string name="arnold">Arnold</string>
    <string name="set">Set</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="email">Email</string>
    <string name="password_again">Password again</string>
    <string name="merlin">Merlin</string>
    <string name="servant">Servant of arthur</string>
    <string name="minion">Minion of mordred</string>
    <string name="percival_sees">Merlin:</string>
    <string name="merlin_sees">The evil minions:</string>
    <string name="evil_sees">Evil companions:</string>
    <string name="invalid_pass">Invalid Email or Password</string>
    <string name="fill_out_field">You must fill out this field</string>
    <string name="match_pass">The two passwords does not match!</string>
    <string name="err_join">Something went wrong try again!</string>
    <string name="err_not_found">Lobby with this code is not found!</string>
    <string name="err_empty">If you want to join a lobby you need to fill this out!</string>
    <string name="select_x_not_x">You have to select %d people, not %d!</string>
    <string name="select_x">Select %d players</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="king_selected">%s has selected:</string>
</resources>